--- a/css/style.css
+++ b/css/style.css
@@ -123,83 +123,7 @@ body {
   flex-direction: column;
 }
 
-/* banners carousel    */
-.banner-container {
-  width: 100%;
-  max-width: 1500px;
-  height: 100vh;
-  margin: auto;
-    /* z-index: 0; */
-}
-.banner-carousel {
-  position: relative;
-  overflow: hidden;
-  /* z-index: -1; */
-}
-.banner-carousel-track {
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-}
-.carousel-slide {
-  min-width: 100%;
-  height: 800px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.slide1 {
-  background: url("/assets/images/carousel-1.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.slide2 {
-  background: url("/assets/images/carousel\ -2.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-}
-.slide3 {
-  background: url("/assets/images/carousel-3.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.slide4 {
-  background: url("/assets/images/carousel-4.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.slide5 {
-  background: url("/assets/images/carousel-5.jpg");
-   background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.slide6 {
-  background: url("/assets/images/carousel-6.jpg");
-   background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.btn {
-  position: absolute;
-  top: 20%;
-  transform: translateY(-50%);
-  background: var(--modal-bg);
-  color: white;
-  border: none;
-  font-size: 2rem;
-  cursor: pointer;
-  padding: var(--spacing-sm);
 
-}
-.btn.prev {
-  left: 10px;
-}
-.btn.next {
-  right: 10px;
-}
 /* Address Modal */
 .address-modal {
   position: fixed;
